<resources>
    <string name="app_name">HackathonApp</string>
    <string name="tap_to_start">Tap Here To Start</string>

    <string name="nursik_main_title">Nursik</string>
    <string name="welcome_sign_in">Welcome to Nursik!</string>
    <string name="message_sign_in_to_start">Please sign in to start</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <string name="write_text">Write text here &#8230;</string>

    <string name="avg_heart_rate">Average Heart Rate</string>
    <string name="signals_status">Status</string>
    <string name="Nursik_name">NURSIK</string>
    <string name="create_account_text">Create Account</string>
    <string name="create_new_account">Create new account</string>
    <string name="hint_full_name">Enter full name</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_emergency_phone">Enter emergency phone contact</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">CREATE ACCOUNT</string>
</resources>