<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/maintext"
        style="@style/main_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/nursik_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height='wrap_content'
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_app_icon"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="80dp"
                app:srcCompat="@drawable/app_logo"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="86dp" />

            <TextView
                android:id="@+id/tv_welcome_sign_in"
                style="@style/signals_status_homescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_sign_in" />

            <TextView
                android:id="@+id/tv_sign_in_to_start"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_sign_in_to_start" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/enter_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="15dp" />

                    <EditText
                        android:id="@+id/et_account_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/textview_border"
                        android:hint="@string/enter_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingHorizontal="15dp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/clickable_blue_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/text_for_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="596dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3">

        <TextView
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dont_have_account" />

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/clickable_blue_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>